--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=Requirements Management System
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/requirements_db
+spring.datasource.username=requirements
+spring.datasource.password=secret
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
+
+management.endpoints.web.exposure.include=health,info,metrics
+
+# Temp default user
+spring.security.user.name=admin
+spring.security.user.password=admin
