--- a/pom.xml
+++ b/pom.xml
@@ -2,33 +2,40 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>4.0.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
+
 	<groupId>dev.andrifannar</groupId>
 	<artifactId>requirements</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
 	<name>Requirements Management System</name>
 	<description>System for managing requirements in software development</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
+	<inceptionYear>2025</inceptionYear>
+  <licenses>
+    <license>
+      <name>MIT</name>
+      <url>https://spdx.org/licenses/MIT.html</url>
+    </license>
+  </licenses>
+
 	<developers>
-		<developer/>
+		<developer>
+			<id>andrifannar</id>
+			<name>Andri Fannar Kristjánsson</name>
+			<email></email>
+		</developer>
 	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
+
 	<properties>
 		<java.version>25</java.version>
 	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
