--- a/.github/workflows/release-on-tag.yml
+++ b/.github/workflows/release-on-tag.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Ensure tag commit is on preprod
         run: |
           git fetch origin preprod
-          if ! git merge-base --is-ancestor "$GITHUB_SHA" origin/preprod; THEN
+          if ! git merge-base --is-ancestor "$GITHUB_SHA" origin/preprod; then
             echo "Tag commit $GITHUB_SHA is not reachable from origin/preprod. Aborting promotion."
             exit 1
           fi
