--- a/.github/workflows/promote-to-dev.yml
+++ b/.github/workflows/promote-to-dev.yml
@@ -30,7 +30,11 @@ jobs:
           echo "Remote branches containing this commit:"
           git branch -r --contains "$GITHUB_SHA" || true
 
-          BRANCH=$(git branch -r --contains "$GITHUB_SHA" | sed 's|origin/||' | grep '^feature/' | head -n1 || true)
+          BRANCH=$(git branch -r --contains "$GITHUB_SHA" \
+            | sed 's|origin/||' \
+            | sed 's/^[[:space:]]*//' \
+            | grep '^feature/' \
+            | head -n1 || true)
 
           if [ -z "$BRANCH" ]; then
             echo "No new feature branch found for commit $GITHUB_SHA"
