--- a/.github/workflows/promote-to-test.yml
+++ b/.github/workflows/promote-to-test.yml
@@ -60,8 +60,8 @@ jobs:
           BRANCH="${{ steps.info.outputs.branch }}"
           TAG="${{ steps.info.outputs.tag }}"
 
-          TITLE="Promote ${BRANCH} to test (${tag})"
-          BODY="Automated promotion of \`${BRANCH}\` to \`test\` for tag \`${tag}\`."
+          TITLE="Promote ${BRANCH} to test (${TAG})"
+          BODY="Automated promotion of \`${BRANCH}\` to \`test\` for tag \`${TAG}\`."
 
           if gh pr list --head "$BRANCH" --base "test" --state open --json number --jq '.[0].number' | grep -qE '^[0-9]+$'; then
             echo "PR from ${BRANCH} to test already exists."
