Updated changelog system

--- a/.github/workflows/promote-to-test.yml
+++ b/.github/workflows/promote-to-test.yml
@@ -13,6 +13,7 @@ jobs:
   promote:
     runs-on: ubuntu-latest
     steps:
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -38,7 +39,7 @@ jobs:
           fi
           echo "branch=${BRANCH}" >> $GITHUB_OUTPUT
           echo "Feature branch: $BRANCH"
-
+      
       - name: Ensure tag commit is on dev
         run: |
           git fetch origin dev
@@ -47,7 +48,7 @@ jobs:
             exit 1
           fi
           echo "Tag commit is on origin/dev. Continuing."
-
+      
       - name: Extract changelog content
         id: changelog
         run: |
@@ -55,7 +56,7 @@ jobs:
           # Convert feature/xyz to feat-xyz
           FEATURE_NAME=$(echo "$BRANCH" | sed 's|feature/|feat-|')
           CHANGELOG_FILE="changelogs/${FEATURE_NAME}.md"
-
+          
           if [ -f "$CHANGELOG_FILE" ]; then
             echo "Found changelog: ${CHANGELOG_FILE}"
             echo "file=${CHANGELOG_FILE}" >> $GITHUB_OUTPUT
@@ -64,7 +65,7 @@ jobs:
             echo "No changelog found at ${CHANGELOG_FILE}"
             echo "has_changelog=false" >> $GITHUB_OUTPUT
           fi
-
+      
       - name: Create PR from feature to test
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -72,10 +73,10 @@ jobs:
           BRANCH="${{ steps.info.outputs.branch }}"
           TAG="${{ steps.info.outputs.tag }}"
           TITLE="Promote ${BRANCH} to test (${TAG})"
-
+          
           # Create PR body file to avoid bash substitution issues
           PR_BODY_FILE=$(mktemp)
-
+          
           cat > "$PR_BODY_FILE" << 'END_OF_HEADER'
           ## Automated Promotion to `test`
 
@@ -100,11 +101,32 @@ jobs:
                       echo "---" >> "$PR_BODY_FILE"
                       echo "" >> "$PR_BODY_FILE"
                     else
-                      echo " No changelog found for this feature." >> "$PR_BODY_FILE"
+                      echo "No changelog found for this feature." >> "$PR_BODY_FILE"
                       echo "" >> "$PR_BODY_FILE"
                     fi
                     
+                    # Add commits section
+                    echo "<details>" >> "$PR_BODY_FILE"
+                    echo "<summary>Commits in this promotion</summary>" >> "$PR_BODY_FILE"
+                    echo "" >> "$PR_BODY_FILE"
+                    
+                    # Get commits between test and this branch
+                    git fetch origin test 2>/dev/null || true
+                    COMMITS=$(git log origin/test..${BRANCH} --oneline --pretty=format:"- %s (%h)" 2>/dev/null || echo "- Unable to fetch commit history")
+                    
+                    if [ -n "$COMMITS" ]; then
+                      echo "$COMMITS" >> "$PR_BODY_FILE"
+                    else
+                      echo "- No commits found (branch may be up to date with test)" >> "$PR_BODY_FILE"
+                    fi
+                    
+                    echo "" >> "$PR_BODY_FILE"
+                    echo "</details>" >> "$PR_BODY_FILE"
+                    echo "" >> "$PR_BODY_FILE"
+                    
                     # Add footer
+                    echo "---" >> "$PR_BODY_FILE"
+                    echo "" >> "$PR_BODY_FILE"
                     echo "<sub>This PR was automatically created by the promote-to-test workflow.</sub>" >> "$PR_BODY_FILE"
                     
                     # Check if PR already exists
