--- a/.github/workflows/promote-to-preprod.yml
+++ b/.github/workflows/promote-to-preprod.yml
@@ -100,11 +100,32 @@ jobs:
                       echo "---" >> "$PR_BODY_FILE"
                       echo "" >> "$PR_BODY_FILE"
                     else
-                      echo " No changelog found for this feature." >> "$PR_BODY_FILE"
+                      echo "No changelog found for this feature." >> "$PR_BODY_FILE"
                       echo "" >> "$PR_BODY_FILE"
                     fi
                     
+                    # Add commits section
+                    echo "<details>" >> "$PR_BODY_FILE"
+                    echo "<summary>Commits in this promotion</summary>" >> "$PR_BODY_FILE"
+                    echo "" >> "$PR_BODY_FILE"
+                    
+                    # Get commits between preprod and this branch
+                    git fetch origin preprod 2>/dev/null || true
+                    COMMITS=$(git log origin/preprod..${BRANCH} --oneline --pretty=format:"- %s (%h)" 2>/dev/null || echo "- Unable to fetch commit history")
+                    
+                    if [ -n "$COMMITS" ]; then
+                      echo "$COMMITS" >> "$PR_BODY_FILE"
+                    else
+                      echo "- No commits found (branch may be up to date with preprod)" >> "$PR_BODY_FILE"
+                    fi
+                    
+                    echo "" >> "$PR_BODY_FILE"
+                    echo "</details>" >> "$PR_BODY_FILE"
+                    echo "" >> "$PR_BODY_FILE"
+                    
                     # Add footer
+                    echo "---" >> "$PR_BODY_FILE"
+                    echo "" >> "$PR_BODY_FILE"
                     echo "<sub>This PR was automatically created by the promote-to-preprod workflow.</sub>" >> "$PR_BODY_FILE"
                     
                     # Check if PR already exists
