--- a/.github/workflows/changelog-finalize-release.yml
+++ b/.github/workflows/changelog-finalize-release.yml
@@ -101,7 +101,12 @@ jobs:
               CURRENT_SECTION=""
               
               while IFS= read -r line; do
+                # Skip comments and empty lines
                 if [[ "$line" =~ ^[[:space:]]*$ ]] || [[ "$line" =~ ^\<\!-- ]]; then
+                  # If we hit the guidelines comment, stop processing this file
+                  if [[ "$line" =~ ^\<\!--[[:space:]]*Guidelines ]]; then
+                    break
+                  fi
                   continue
                 fi
                 
@@ -116,6 +121,12 @@ jobs:
                 fi
                 
                 if [[ "$line" =~ ^-[[:space:]]+ ]] && [[ -n "$CURRENT_SECTION" ]]; then
+                  # Skip bullet points that are empty or just whitespace after the dash
+                  CONTENT=$(echo "$line" | sed 's/^-[[:space:]]*//')
+                  if [[ -z "$CONTENT" ]]; then
+                    continue  # Skip empty bullet point
+                  fi
+                  
                   ATTRIBUTED_LINE="${line} *(${FEATURE_NAME})*"
                   
                   case "$CURRENT_SECTION" in
