--- a/.github/workflows/promote-to-preprod.yml
+++ b/.github/workflows/promote-to-preprod.yml
@@ -3,7 +3,7 @@ name: Promote feature to preprod
 on:
   push:
     tags:
-      - "feat-*-preprod"
+      - "feat-*-preprod*"
 
 permissions:
   contents: write
