--- a/.github/workflows/changelog-aggregate-prerelease.yml
+++ b/.github/workflows/changelog-aggregate-prerelease.yml
@@ -66,8 +66,12 @@ jobs:
               
               # Read file line by line
               while IFS= read -r line; do
-                # Skip comments and empty lines at the start
+                # Skip comments and empty lines
                 if [[ "$line" =~ ^[[:space:]]*$ ]] || [[ "$line" =~ ^\<\!-- ]]; then
+                  # If we hit the guidelines comment, stop processing this file
+                  if [[ "$line" =~ ^\<\!--[[:space:]]*Guidelines ]]; then
+                    break
+                  fi
                   continue
                 fi
                 
@@ -85,6 +89,12 @@ jobs:
                 
                 # Collect bullet points with feature attribution
                 if [[ "$line" =~ ^-[[:space:]]+ ]] && [[ -n "$CURRENT_SECTION" ]]; then
+                  # Skip bullet points that are empty or just whitespace after the dash
+                  CONTENT=$(echo "$line" | sed 's/^-[[:space:]]*//')
+                  if [[ -z "$CONTENT" ]]; then
+                    continue  # Skip empty bullet point
+                  fi
+                  
                   # Add feature name attribution
                   ATTRIBUTED_LINE="${line} *(${FEATURE_NAME})*"
                   
@@ -221,16 +231,46 @@ jobs:
         run: |
           VERSION="${{ steps.version.outputs.tag }}"
           
+          echo "Extracting changelog for ${VERSION}..."
+          echo ""
+          
+          # Check if CHANGELOG.md exists
+          if [ ! -f CHANGELOG.md ]; then
+            echo "❌ ERROR: CHANGELOG.md does not exist!"
+            exit 1
+          fi
+          
+          echo "CHANGELOG.md exists, showing first 30 lines:"
+          head -n 30 CHANGELOG.md
+          echo ""
+          
           # Extract just this version's section from CHANGELOG.md
           TEMP_FILE=$(mktemp)
           
+          echo "Extracting section for: ## ${VERSION}"
           awk "/^## ${VERSION}/,/^## / {
             if (/^## / && !/^## ${VERSION}/) exit;
             if (!/^## ${VERSION}/) print;
           }" CHANGELOG.md > "$TEMP_FILE"
           
-          echo "Release body preview:"
-          cat "$TEMP_FILE"
+          echo ""
+          echo "Extracted content (first 50 lines):"
+          head -n 50 "$TEMP_FILE"
+          echo ""
+          
+          # Check if extraction was successful
+          if [ ! -s "$TEMP_FILE" ]; then
+            echo "⚠️  WARNING: Extracted changelog is empty!"
+            echo "This might mean the version section wasn't found in CHANGELOG.md"
+            echo ""
+            echo "Creating fallback message..."
+            echo "## ${VERSION}" > "$TEMP_FILE"
+            echo "" >> "$TEMP_FILE"
+            echo "Pre-release version. See CHANGELOG.md in the repository for details." >> "$TEMP_FILE"
+          else
+            FILE_SIZE=$(wc -c < "$TEMP_FILE")
+            echo "✅ Extraction successful (${FILE_SIZE} bytes)"
+          fi
           
           echo "body_file=${TEMP_FILE}" >> $GITHUB_OUTPUT
 
